--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <h2>Compare your car to an electric car</h2>
 
     <label for="no_sv">Number of Car/Small Van:</label>
-    <input type="text" id="no_sv" /><br />
-    <label for="no_mv">Number of Medium Van:</label> <input type="text" /><br />
-    <label for="no_lv">Number of Large Van:</label> <input type="text" /><br />
+    <input type="text" id="no_sv" value="0" /><br />
+    <label for="no_mv">Number of Medium Van:</label>
+    <input type="text" id="no_mv" value="0" /><br />
+    <label for="no_lv">Number of Large Van:</label>
+    <input type="text" id="no_lv" value="0" /><br />
     <label for="mil_sv">Estimated Mileage of Car/Small Van</label>
-    <input type="text" id="mil_sv" /><br />
+    <input type="text" id="mil_sv" value="0" /><br />
     <label for="mil_mv">Estimated Mileage of Medium Van</label>
-    <input type="text" /><br />
+    <input type="text" id="mil_mv" value="0" /><br />
     <label for="mil_lv">Estimated Mileage of Large Van</label>
-    <input type="text" /><br />
+    <input type="text" id="mil_lv" value="0" /><br />
     <button onclick="calc();">Result</button>
-    <input type="text" id="result" />
+    <input type="text" id="result" value="0" />
   </body>
 </html>
