--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <input type="text" id="mil_mv" value="0" /><br />
     <label for="mil_lv">Estimated Mileage of Large Van</label>
     <input type="text" id="mil_lv" value="0" /><br />
-    <button onclick="calc();">Result</button>
-    <input type="text" id="result" value="0" />
+    <button onclick="calc();">Total Savings</button><br />
+    <label for="co2_saving">Total CO2 Saving (Metric Tonnes)</label>
+    <input type="text" id="co2" value="0" /><br />
+    <label for="co2_saving">Total Cost Saving (Pounds)</label>
+    <input type="text" id="cost" value="0" />
   </body>
 </html>
