--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
 
     <!-- The video -->
     <video autoplay muted loop id="myVideo">
-      <source
-        src="https://www.arup.com/-/media/arup/videos/electric-vehicle-recharge-animation.mp4"
-        type="video/mp4"
-      />
+      <source src="ev.mp4" type="video/mp4" />
     </video>
 
     <!-- Calculator -->
